--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
 	<title>BULLSY - psd to html</title>
 	<meta name="keywords" content="PSD to HTML, html, psd, e-commerce to html">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon.ico">
@@ -38,6 +37,7 @@
 				</ul>
 			</div>
 		</div>
+	</div>
 	<!--header start-->
 	<div class="header_wrapper container-fluid fix">
 		<div class="header container">
@@ -107,6 +107,7 @@
 				<p>- return policy on all orders within <a href="#">14 days</a></p>
 			</div>
 		</div>
+	</div>
 	<!--portfolio_one start-->
 	<div class="portfolio_one_wrapper container-fluid fix">
 		<div class="portfolio_one container">
