--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
 	<title>BULLSY - psd to html</title>
 	<meta name="keywords" content="PSD to HTML, html, psd, e-commerce to html">
 	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon.ico">
@@ -153,35 +154,35 @@
 			</div>
 			<div class="two_wrapper pull-left">
 				<img src="images/la1.png" alt="portfolio">
-			<div class="two">
-				<p>Bullsy Shoes in white</p>
-				<h4>$159.99</h4>
-				<p><a href="#">ADD TO CART</a></p>
-			</div>
+				<div class="two">
+					<p>Bullsy Shoes in white</p>
+					<h4>$159.99</h4>
+					<p><a href="#">ADD TO CART</a></p>
+				</div>
 			</div>
 			<div class="two_wrapper pull-left">
 				<img src="images/la3.png" alt="portfolio">
-			<div class="two">
-				<p>Rough Bullsy Shoes for Winter</p>
-				<h4>$329.49</h4>
-				<p><a href="#">ADD TO CART</a></p>
-			</div>
+				<div class="two">
+					<p>Rough Bullsy Shoes for Winter</p>
+					<h4>$329.49</h4>
+					<p><a href="#">ADD TO CART</a></p>
+				</div>
 			</div>
 			<div class="two_wrapper pull-left">
 				<img src="images/la2.png" alt="portfolio">
-			<div class="two">
-				<p>Bullsy Snickers</p>
-				<h4>$52.99</h4>
-				<p><a href="#">ADD TO CART</a></p>
+				<div class="two">
+					<p>Bullsy Snickers</p>
+					<h4>$52.99</h4>
+					<p><a href="#">ADD TO CART</a></p>
 			</div>
 			</div>
 			<div class="two_wrapper pull-left">
 				<img src="images/la4.png" alt="portfolio">
-			<div class="two">
-				<p>Bullsy grey Snickers / Shoes</p>
-				<h4>$79.49</h4>
-				<p><a href="#">ADD TO CART</a></p>
-			</div>
+				<div class="two">
+					<p>Bullsy grey Snickers / Shoes</p>
+					<h4>$79.49</h4>
+					<p><a href="#">ADD TO CART</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -194,35 +195,35 @@
 			</div>
 			<div class="three_wrapper pull-left">
 				<img src="images/fp1.png" alt="portfolio">
-			<div class="three">
-				<p>Bullsy running Snickers</p>
-				<h4>$159.99</h4>
-				<p><a href="#">ADD TO CART</a></p>
-			</div>
+				<div class="three">
+					<p>Bullsy running Snickers</p>
+					<h4>$159.99</h4>
+					<p><a href="#">ADD TO CART</a></p>
+				</div>
 			</div>
 			<div class="three_wrapper pull-left">
 				<img src="images/fp2.png" alt="portfolio">
-			<div class="three">
-				<p>Rough Hiking Shoes</p>
-				<h4>$329.49</h4>
-				<p><a href="#">ADD TO CART</a></p>
-			</div>
+				<div class="three">
+					<p>Rough Hiking Shoes</p>
+					<h4>$329.49</h4>
+					<p><a href="#">ADD TO CART</a></p>
+				</div>
 			</div>
 			<div class="three_wrapper pull-left">
 				<img src="images/fp3.png" alt="portfolio">
-			<div class="three">
-				<p>Waterproof Bullsy Snickers</p>
-				<h4>$52.99</h4>
-				<p><a href="#">ADD TO CART</a></p>
-			</div>
+				<div class="three">
+					<p>Waterproof Bullsy Snickers</p>
+					<h4>$52.99</h4>
+					<p><a href="#">ADD TO CART</a></p>
+				</div>
 			</div>
 			<div class="three_wrapper pull-left">
 				<img src="images/fp4.png" alt="portfolio">
-			<div class="three">
-				<p>Bullsy working Shoes</p>
-				<h4>$79.49</h4>
-				<p><a href="#">ADD TO CART</a></p>
-			</div>
+				<div class="three">
+					<p>Bullsy working Shoes</p>
+					<h4>$79.49</h4>
+					<p><a href="#">ADD TO CART</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -235,33 +236,33 @@
 			</div>
 			<div class="four_wrapper pull-left">
 				<img src="images/b1.png" alt="portfolio">
-			<div class="four">
-				<h4>Extra rugged flip-flops will arrive soon</h4>
-				<p>Lorem ipsum dolor sit amet, coct adipiscing elit, ip
-as consectuni. Lor ipsum dolor sit amet, consec adi
-pis elit, sed diam nonumm nibh euised tincidunt.</p>
-				<p><a href="#">Read More</a></p>
-			</div>
+				<div class="four">
+					<h4>Extra rugged flip-flops will arrive soon</h4>
+					<p>Lorem ipsum dolor sit amet, coct adipiscing elit, ip
+					as consectuni. Lor ipsum dolor sit amet, consec adi
+					pis elit, sed diam nonumm nibh euised tincidunt.</p>
+					<p><a href="#">Read More</a></p>
+				</div>
 			</div>
 			<div class="four_wrapper pull-left">
 				<img src="images/b2.png" alt="portfolio">
-			<div class="four">
-				<h4>New models of Bullsy Snickers just arrived</h4>
-				<p>Lorem ipsum dolor sit amet, coct adipiscing elit, ip
-as consectuni. Lor ipsum dolor sit amet, consec adi
-pis elit, sed diam nonumm nibh euised tincidunt.</p>
-				<p><a href="#">Read More</a></p>
-			</div>
+				<div class="four">
+					<h4>New models of Bullsy Snickers just arrived</h4>
+					<p>Lorem ipsum dolor sit amet, coct adipiscing elit, ip
+					as consectuni. Lor ipsum dolor sit amet, consec adi
+					pis elit, sed diam nonumm nibh euised tincidunt.</p>
+					<p><a href="#">Read More</a></p>
+				</div>
 			</div>
 			<div class="four_wrapper pull-left">
 				<img src="images/b3.png" alt="portfolio">
-			<div class="four">
-				<h4>Extra rugged flip-flops will arrive soon</h4>
-				<p>Lorem ipsum dolor sit amet, coct adipiscing elit, ip
-as consectuni. Lor ipsum dolor sit amet, consec adi
-pis elit, sed diam nonumm nibh euised tincidunt.</p>
-				<p><a href="#">Read More</a></p>
-			</div>
+				<div class="four">
+					<h4>Extra rugged flip-flops will arrive soon</h4>
+					<p>Lorem ipsum dolor sit amet, coct adipiscing elit, ip
+					as consectuni. Lor ipsum dolor sit amet, consec adi
+					pis elit, sed diam nonumm nibh euised tincidunt.</p>
+					<p><a href="#">Read More</a></p>
+				</div>
 			</div>
 		</div>
 	</div>
